RESOLVED FIXED213529
REGRESSION (r244633): Mail flashes when copying text in an email
https://bugs.webkit.org/show_bug.cgi?id=213529
Summary REGRESSION (r244633): Mail flashes when copying text in an email
Wenson Hsieh
Reported 2020-06-23 13:26:47 PDT
Attachments
For EWS (11.88 KB, patch)
2020-06-23 13:52 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-06-23 13:52:11 PDT
EWS
Comment 2 2020-06-23 15:52:34 PDT
Committed r263428: <https://trac.webkit.org/changeset/263428> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402587 [details].
Note You need to log in before you can comment on or make changes to this bug.